# Search-Engine-1

./: .gitignore  CMakeLists.txt  README.md  Search Engine.cpp  Search Engine.h  config.json  requests.json
inc/: ConverterJSON.h
include/: ConverterJSON.h  Exceptions.h  InvertedIndex.h  SearchEngine.h  customExceptions.h
src/: CMakeLists.txt  ConverterJSON.cpp  InvertedIndex.cpp  SearchEngine.cpp  main.cpp
tests/: CMakeLists.txt  ConverterJSON_test.cpp  InvertedIndex_test.cpp  SearchEngine_test.cpp  test01.cpp
